-- InitialCreate SQL for SQLite (generated from models)
PRAGMA foreign_keys = ON;

CREATE TABLE IF NOT EXISTS Users (
  Id INTEGER PRIMARY KEY AUTOINCREMENT,
  Username TEXT NOT NULL,
  Email TEXT NOT NULL UNIQUE,
  PasswordHash TEXT,
  CreatedAt TEXT
);

CREATE TABLE IF NOT EXISTS Projects (
  Id INTEGER PRIMARY KEY AUTOINCREMENT,
  Name TEXT,
  Description TEXT,
  OwnerId INTEGER,
  FOREIGN KEY (OwnerId) REFERENCES Users(Id) ON DELETE SET NULL
);

CREATE TABLE IF NOT EXISTS ProjectMembers (
  Id INTEGER PRIMARY KEY AUTOINCREMENT,
  ProjectId INTEGER NOT NULL,
  UserId INTEGER NOT NULL,
  Role TEXT,
  FOREIGN KEY (ProjectId) REFERENCES Projects(Id) ON DELETE CASCADE,
  FOREIGN KEY (UserId) REFERENCES Users(Id) ON DELETE CASCADE
);
CREATE UNIQUE INDEX IF NOT EXISTS IX_ProjectMembers_Project_User ON ProjectMembers(ProjectId, UserId);

CREATE TABLE IF NOT EXISTS Tasks (
  Id INTEGER PRIMARY KEY AUTOINCREMENT,
  Title TEXT,
  Description TEXT,
  Status TEXT,
  ProjectId INTEGER,
  AssigneeId INTEGER,
  FOREIGN KEY (ProjectId) REFERENCES Projects(Id) ON DELETE CASCADE,
  FOREIGN KEY (AssigneeId) REFERENCES Users(Id) ON DELETE SET NULL
);

CREATE TABLE IF NOT EXISTS Messages (
  Id INTEGER PRIMARY KEY AUTOINCREMENT,
  SenderId INTEGER NOT NULL,
  ProjectId INTEGER,
  ReceiverId INTEGER,
  ParentId INTEGER,
  Content TEXT,
  FOREIGN KEY (SenderId) REFERENCES Users(Id) ON DELETE CASCADE,
  FOREIGN KEY (ProjectId) REFERENCES Projects(Id) ON DELETE CASCADE,
  FOREIGN KEY (ReceiverId) REFERENCES Users(Id) ON DELETE SET NULL,
  FOREIGN KEY (ParentId) REFERENCES Messages(Id) ON DELETE CASCADE
);
CREATE INDEX IF NOT EXISTS IX_Messages_ProjectId ON Messages(ProjectId);
CREATE INDEX IF NOT EXISTS IX_Messages_ReceiverId ON Messages(ReceiverId);

CREATE TABLE IF NOT EXISTS Notifications (
  Id INTEGER PRIMARY KEY AUTOINCREMENT,
  UserId INTEGER NOT NULL,
  Content TEXT,
  IsRead INTEGER DEFAULT 0,
  Type TEXT,
  ReferenceId INTEGER,
  FOREIGN KEY (UserId) REFERENCES Users(Id) ON DELETE CASCADE
);
